<resources>
    <string name="app_name">Jefe de Ruta</string>
    <!-- Strings related to login -->
    <string name="prompt_user_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_email">Not a valid user email</string>
    <string name="invalid_password">Not a valid password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="list_of_clients">List of clients of </string>
    <string name="next_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>

    <!--String related to new client form-->
    <string name="title_client_name">Name of the client</string>
    <string name="add_button_description">Add new client</string>
    <string name="prompt_client_name">Name of client</string>
    <string name="required_field">This field is required</string>
    <string name="prompt_client_alias" translatable="false">Alias</string>
    <string name="prompt_client_address">Client address</string>
    <string name="prompt_client_suburb">Suburb</string>
    <string name="prompt_client_cp">Postal Code</string>
    <string name="prompt_client_city">City</string>
    <string name="prompt_client_state">State</string>
    <string name="ice">Ice</string>
    <string name="water">Water</string>
    <string name="products">Products</string>
    <string name="customer_type">Customer Type</string>
    <string name="private_client">Private</string>
    <string name="wholesaler_client">Wholesaler</string>
    <string name="governmental">Governmental</string>
    <string name="product_error">Select at least one product </string>

</resources>