<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.NewClientTypeFragment">

    <data>
        <variable
            name="sharedViewModel"
            type="com.gruposinai.jefederuta.model.ClientViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/side_margin">

        <TextView
            android:id="@+id/products_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/products">
        </TextView>

        <CheckBox
            android:id="@+id/ice_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ice"
            android:checked="@{sharedViewModel.iceBuyer}"
            android:onClick="@{() -> sharedViewModel.setIceBuyer(!sharedViewModel.iceBuyer)}">
        </CheckBox>

        <CheckBox
            android:id="@+id/water_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water"
            android:checked="@{sharedViewModel.waterBuyer}"
            android:onClick="@{() -> sharedViewModel.setWaterBuyer(!sharedViewModel.waterBuyer)}">
        </CheckBox>

        <TextView
            android:id="@+id/error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.JefeDeRuta.TextInputLayout.OutlinedBox"
            android:text="">
        </TextView>

        <View
            android:id="@+id/divider1"
            style="@style/Widget.JefeDeRuta.Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/side_margin"
            android:layout_marginBottom="@dimen/side_margin"/>

        <TextView
            android:id="@+id/customer_type_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_type">
        </TextView>

        <RadioGroup
            android:id="@+id/customer_type_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/private_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_client"
                android:checked="@{sharedViewModel.customerType.equals(@string/private_client)}"
                android:onClick="@{() -> sharedViewModel.setCustomerType(@string/private_client)}">
            </RadioButton>

            <RadioButton
                android:id="@+id/wholesaler_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wholesaler_client"
                android:checked="@{sharedViewModel.customerType.equals(@string/wholesaler_client)}"
                android:onClick="@{() -> sharedViewModel.setCustomerType(@string/wholesaler_client)}">
            </RadioButton>

            <RadioButton
                android:id="@+id/governmental_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/governmental"
                android:checked="@{sharedViewModel.customerType.equals(@string/governmental)}"
                android:onClick="@{() -> sharedViewModel.setCustomerType(@string/governmental)}">
            </RadioButton>

        </RadioGroup>

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_button">
        </Button>

    </LinearLayout>
</layout>