<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="sharedViewModel"
            type="com.gruposinai.jefederuta.model.ClientViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/side_margin"
        tools:context=".fragment.NewClientAddressFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_client_address"
            style="@style/Widget.JefeDeRuta.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_client_address"
            app:errorIconDrawable="@drawable/ic_error"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_tex_client_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_client_suburb"
            style="@style/Widget.JefeDeRuta.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_client_suburb"
            app:errorIconDrawable="@drawable/ic_error"
            app:layout_constraintTop_toBottomOf="@id/text_layout_client_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_tex_client_suburb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_client_cp"
            style="@style/Widget.JefeDeRuta.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_client_cp"
            app:errorIconDrawable="@drawable/ic_error"
            app:layout_constraintTop_toBottomOf="@id/text_layout_client_suburb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_tex_client_cp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:digits="0123456789"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_client_city"
            style="@style/Widget.JefeDeRuta.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_client_city"
            app:errorIconDrawable="@drawable/ic_error"
            app:layout_constraintTop_toBottomOf="@id/text_layout_client_cp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_tex_client_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_client_state"
            style="@style/Widget.JefeDeRuta.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_client_state"
            app:errorIconDrawable="@drawable/ic_error"
            app:layout_constraintTop_toBottomOf="@id/text_layout_client_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_tex_client_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_layout_client_state"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/save_button"
            android:layout_marginEnd="@dimen/side_margin"
            android:text="@string/cancel_button"
            style="?attr/materialButtonOutlinedStyle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>